--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.2",
     "bootstrap": "^5.3.3",
     "connect-flash": "^0.1.1",
     "ejs": "^3.1.9",
